testsuite/tests/linear/should_compile/T18731.hs
{-# LANGUAGE LinearTypes #-}
module T18731 where

f :: a #-> b
f x = undefined x
